--- a/assets/style.css
+++ b/assets/style.css
@@ -8,4 +8,19 @@ body {
 h1 {
     font-family: sans-serif;
     font-size: 24px;
+    background-color: darkslategray;
+    text-align: center;
 }
+
+button {
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    }
