--- a/assets/style.css
+++ b/assets/style.css
@@ -10,6 +10,9 @@ h1 {
     font-size: 24px;
     background-color: darkslategray;
     text-align: center;
+    font-weight: bold;
+    margin-top: 0px;
+    margin-bottom: 1px;
 }
 
 button {
