--- a/assets/style.css
+++ b/assets/style.css
@@ -16,6 +16,8 @@ h1 {
 }
 
 button {
+    display: inline-block;
+    text-align: center;
     background-color: #4CAF50;
     border: none;
     color: white;
