--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'Open Sans', sans-serif;
     font-size: 24px;
-    background-color: steelblue;
+    background-color: rgb(35, 126, 200);
 
 }
 
@@ -11,8 +11,14 @@ h1 {
     text-align: center;
 }
 
-button {
-   font-size: 20px; 
+.radio-toolbar label {
+    display: inline-block;
+    background-color: #ddd;
+    padding: 10px 20px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 14px;
+    border: 2px solid #444;
+    border-radius: 4px;
 }
 
 .textBox {
