--- a/assets/style.css
+++ b/assets/style.css
@@ -29,3 +29,9 @@ button {
     margin: 4px 2px;
     cursor: pointer;
     }
+
+.searchHolder {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
