--- a/assets/style.css
+++ b/assets/style.css
@@ -35,3 +35,9 @@ button {
     justify-content: center;
     align-items: center;
 }
+
+p {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
