--- a/assets/style.css
+++ b/assets/style.css
@@ -8,11 +8,12 @@ body {
 h1 {
     font-family: sans-serif;
     font-size: 36px;
-    background-color: darkslategray;
+    background-color: darkblue;
     text-align: center;
     font-weight: bold;
     margin-top: 0px;
     margin-bottom: 1px;
+    color: darkred;
 }
 
 button {
@@ -21,7 +22,7 @@ button {
     background-color: #4CAF50;
     border: none;
     color: white;
-    padding: 15px 32px;
+    padding: 10px 24px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -42,6 +43,7 @@ p {
     justify-content: center;
     align-items: center;
 }
+
 .radio-toolbar label {
     display: inline-block;
     background-color: #ddd;
