--- a/assets/style.css
+++ b/assets/style.css
@@ -13,13 +13,13 @@ h1 {
     font-weight: bold;
     margin-top: 0px;
     margin-bottom: 1px;
-    color: darkred;
+    color: greenyellow;
 }
 
 button {
     display: inline-block;
     text-align: center;
-    background-color: #4CAF50;
+    background-color: rgb(157, 228, 51);
     border: none;
     color: white;
     padding: 10px 24px;
@@ -61,9 +61,39 @@ p {
     align-content: center;
 }
 
-.button {
+.title {
+   font-size: 20px; 
+   font-weight: bold;
+}
+
+.type {
+    font-size: 18px;
+}
+
+.dateTime {
+    font-size: 14px;
+}
+
+.location {
+    font-size: 14px;
+}
+
+.price {
+    font-size: 14px;
+}
+
+@media screen and (max-width: 480px) {
+    .h1{
+        font-size: 20px;
+    } 
+    
+}
+
+
+
+/* .button {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-content: center; 
-}
+} */
