--- a/assets/style.css
+++ b/assets/style.css
@@ -84,12 +84,24 @@ p {
 }
 
 @media screen and (max-width: 480px) {
-    .h1{
+    .body {
+        justify-content: center;
+    }
+    
+    .h1 {
         font-size: 20px;
+        justify-content: center;
     } 
     
+    .radio-toolbar label {
+        font-size: 16px;
+        justify-content: center;
 }
 
+    .textBox {
+        justify-content: center;
+        font-size: 16px;
+    }
 
 
 /* .button {
