--- a/assets/style.css
+++ b/assets/style.css
@@ -107,12 +107,41 @@ p {
         margin-left: 5px;
     }
 
-    #results {
+    .title {
+        font-size: 14px; 
+        font-weight: bold;
         justify-content: center;
-        font-size: 16px;
         margin-right: 5px;
         margin-left: 5px;
-    }
+     }
+     
+     .type {
+        font-size: 14px;
+        justify-content: center;
+        margin-right: 5px;
+        margin-left: 5px;
+     }
+     
+     .dateTime {
+        font-size: 14px;
+        justify-content: center;
+        margin-right: 5px;
+        margin-left: 5px;
+     }
+     
+     .location {
+        font-size: 14px;
+        justify-content: center;
+        margin-right: 5px;
+        margin-left: 5px;
+     }
+     
+     .price {
+        font-size: 14px;
+        justify-content: center;
+        margin-right: 5px;
+        margin-left: 5px;
+     }
 
 
 /* .button {
