added css to moneyPicker

--- a/assets/style.css
+++ b/assets/style.css
@@ -30,13 +30,13 @@ button {
     }
 
     
-.moneyPicker {
+#moneyPicker {
     display: inline-block;
     text-align: center;
     background-color: rgb(157, 228, 51);
     border: none;
     color: white;
-    padding: 10px 24px;
+    padding: 5px 10px;
     text-decoration: none;
     font-size: 16px;
     margin: 4px 2px;
@@ -112,7 +112,7 @@ p {
         font-size: 12px;
     }
 
-    .moneyPicker {
+    #moneyPicker {
         padding: 5px 12px;
         font-size: 12px ;
     }
