--- a/assets/style.css
+++ b/assets/style.css
@@ -4,6 +4,9 @@ body {
     background-color: rgb(35, 126, 200);
 
 }
+.resultsBox {
+    background: black;
+}
 
 h1 {
     font-family: sans-serif;
